Fixed layout problems in bag details page Fixes #1314

--- a/flymine/webapp/resources/webapp/model/model.css
+++ b/flymine/webapp/resources/webapp/model/model.css
@@ -53,7 +53,7 @@ table.results tr td.highlightCell {
 
 #bagDescriptionDiv{
 	background-color: #F5F0FF;
-	height:150px;
+	min-height:150px;
 	width:70%;
 	text-align:left;
 	padding:10px;
